# rfpred

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
data/model_data/: maccs_X_test.npy  maccs_X_val.npy  maccs_y_test.npy  maccs_y_train.npy  maccs_y_val.npy
docs/source/: conf.py
notebooks/: README.md  notebooks1.ipynb  notebooks2.ipynb
src/rfpred/: __init__.py  functions.py  models.py  rfpred_prediction.py  streamlit_gui.py  test.py
tests/: functions_test.py  test.py  test_example_module.py  tests.py
