[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rfpred"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Package that predicts the Rf values for silica thin-layer-chromatographies (TLCs)"
dependencies = [
    "lightgbm>=3.2.1",
    "numpy>=1.20.0",
    "rdkit",
    "streamlit>=0.82.0",
    "streamlit_ketcher",
    "matplotlib>=3.4.2"
]
authors = [
    {name = "Milena Wiegand", email = "milena.wiegand@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/MW21P/rfpred"
tracker = "https://github.com/MW21P/rfpred/issues"


[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/rfpred/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
